# versa-transfer-hook

./: .gitignore  ARCHITECTURE.md  Anchor.toml  DEPLOY.md  FINAL_STATUS.md  FOR_JUDGES.md  JUDGE_QUICKSTART.md  PYTHON_SCRIPTS.md  PYTHON_SETUP_SUMMARY.md  README.md  README_BUILD_WORKAROUND.md  STATUS.md  requirements.txt
programs/versa_transfer_hook/: Cargo.toml
programs/versa_transfer_hook/src/: lib.rs
scripts/: check_program.py  demo.ts  deploy_helper.py  python_demo.py  test_hook_locally.py
tests/: versa_transfer_hook.ts
