[package]
name = "versa_transfer_hook"
version = "0.1.0"
description = "Versa Transfer Hook for Token Extensions - Colosseum Hackathon"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "versa_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# Using fixed versions for stability
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
solana-program = "=1.18.17"
spl-transfer-hook-interface = "0.6.3"
spl-tlv-account-resolution = "0.6.3"
spl-pod = "0.2.2"
